linprocfs(4): Fixup process size in the /proc/pid/stat file

According to the Linux sources the kernel exposes a proces virtual
memory size via proc filesystem into the three files - stat, status
and statm. This is the struct mm->total_vm value adjusted to the
corresponding units - bytes, kilobytes and pages.

The fix is based on a fernape@ analysis.

Approved by:	re (delphij)
PR:		265937
Reported by:	Ray Bellis
MFC after:	3 days

(cherry picked from commit a55b5a9aed3981fcec205e246436991d138c78a2)
(cherry picked from commit 867e8404efed7a33553646b89588831db1a2102b)